[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "padelf"
version = "0.1.1"
description = "Easy Access to the current EPEX market forecast (day-ahead, week-ahead)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Lukas Baur" },
]
keywords = ["epex", "price forecasting", "day-ahead", "week-ahead", "energy", "time series", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas>=1.5",
    "pyyaml>=6.0",
    "requests>=2.28",
    "tqdm>=4.66",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/LSB-dev/EPEX-Forecast-PyPI"
Repository = "https://github.com/LSB-dev/EPEX-Forecast-PyPI"

[tool.hatch.build.targets.wheel]
packages = ["src/epex_forecast"]
